# lla

./: CHANGELOG.md  Cargo.toml  README.md
.github/scripts/: prepare_release.sh  release_helpers.sh
.github/workflows/: README.md  prepare-release.yml  release.yml
completions/: _lla  lla.elv  lla.fish  lla.ps1
lla/: Cargo.toml
lla/src/commands/: args.rs  file_utils.rs
lla/src/config/: mod.rs
lla_plugin_interface/: build.rs
lla_plugin_interface/src/: lib.rs
lla_plugin_utils/: Cargo.toml
lla_plugin_utils/src/: actions.rs  format.rs  lib.rs
lla_plugin_utils/src/ui/: components.rs  live_suggest.rs
plugins/brew/: Cargo.toml
plugins/brew/src/: lib.rs
plugins/categorizer/: Cargo.toml
plugins/code_complexity/: Cargo.toml
plugins/code_snippet_extractor/: Cargo.toml
plugins/code_snippet_extractor/src/: lib.rs
plugins/dirs_meta/: Cargo.toml
plugins/duplicate_file_detector/: Cargo.toml
plugins/file_copier/: Cargo.toml
plugins/file_hash/: Cargo.toml
plugins/file_hash/src/: lib.rs
plugins/file_meta/: Cargo.toml
plugins/file_mover/: Cargo.toml
plugins/file_organizer/: Cargo.toml
plugins/file_remover/: Cargo.toml
plugins/file_tagger/: Cargo.toml
plugins/flush_dns/: Cargo.toml
plugins/git_status/: Cargo.toml
plugins/google_meet/: Cargo.toml
plugins/google_search/: Cargo.toml
plugins/google_search/src/: lib.rs
plugins/hackernews/: Cargo.toml
plugins/hackernews/src/: lib.rs
plugins/jwt/: Cargo.toml
plugins/keyword_search/: Cargo.toml
plugins/keyword_search/src/: lib.rs
plugins/kill_process/: Cargo.toml
plugins/kill_process/src/: lib.rs
plugins/last_git_commit/: Cargo.toml
plugins/npm/: Cargo.toml
plugins/remove_paywall/: Cargo.toml
plugins/sizeviz/: Cargo.toml
plugins/speed_test/: Cargo.toml
plugins/speed_test/src/: lib.rs
plugins/youtube/: Cargo.toml
plugins/youtube/src/: lib.rs
scripts/: build_plugins.sh
