[package]
name = "jwt"
description = "JWT decoder and analyzer with search and validation capabilities"
version = "0.5.5"
edition = "2021"

[dependencies]
colored = "2.0.0"
lla_plugin_interface = { path = "../../lla_plugin_interface" }
lla_plugin_utils = { path = "../../lla_plugin_utils" }
dirs = "5.0.1"
serde = { version = "1.0.200", features = ["derive"] }
toml = "0.8.8"
prost = "0.12"
bytes = "1.5"
dialoguer = "0.11.0"
console = "0.15.7"
chrono = "0.4"
serde_json = "1.0"
arboard = "3.3.0"
base64 = "0.22"
regex = "1.11"

[lib]
crate-type = ["cdylib"]
