[package]
name = "remove_paywall"
description = "Remove paywalls from URLs using services like 12ft.io, archive.is, and removepaywall.com"
version = "0.5.5"
edition = "2021"

[dependencies]
colored = "2.0.0"
lla_plugin_interface = { path = "../../lla_plugin_interface" }
lla_plugin_utils = { path = "../../lla_plugin_utils" }
dirs = "5.0.1"
serde = { version = "1.0.200", features = ["derive"] }
toml = "0.8.8"
prost = "0.12"
bytes = "1.5"
dialoguer = "0.11.0"
console = "0.15.7"
chrono = "0.4"
arboard = "3.3.0"
url = "2.5"

[lib]
crate-type = ["cdylib"]

