[package]
name = "youtube"
description = "YouTube search plugin with autosuggestions and history management"
version = "0.5.5"
edition = "2021"

[dependencies]
colored = "2.0.0"
lla_plugin_interface = { path = "../../lla_plugin_interface" }
lla_plugin_utils = { path = "../../lla_plugin_utils" }
dirs = "5.0.1"
serde = { version = "1.0.200", features = ["derive"] }
toml = "0.8.8"
prost = "0.12"
bytes = "1.5"
dialoguer = "0.11.0"
console = "0.15.7"
arboard = "3.3.0"
chrono = "0.4"
url = "2.5"
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
serde_json = "1.0"
indicatif = "0.17"

[lib]
crate-type = ["cdylib"]
